Create UserRepository, metod store in UserController
